--- a/MiniEngine.vcxproj.filters
+++ b/MiniEngine.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClInclude Include="resource\Resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="engine\src\platform\log.h">
+    <ClInclude Include="engine\src\core\log.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="engine\src\engine\engine.h">
