--- a/MiniEngine.vcxproj
+++ b/MiniEngine.vcxproj
@@ -562,6 +562,7 @@
     <ClInclude Include="engine\src\container\static_array.h" />
     <ClInclude Include="engine\src\container\static_queue.h" />
     <ClInclude Include="engine\src\container\string.h" />
+    <ClInclude Include="engine\src\memory\unique_ptr.h" />
     <ClInclude Include="engine\src\ministl\algorithm.h" />
     <ClInclude Include="engine\src\ministl\array.h" />
     <ClInclude Include="engine\src\container\count_ptr.h" />
