--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,32 @@
 # build
 bin/
+build/
 intermediate/
+
+# cmake
+cmake/
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+CMakeUserPresets.json
 
 # visual studio
 .vs/
 .vscode/
 .history/
 packages/
+packages.config
+*.sln
+*.vcxproj
+*.vcxproj.filters
 
 # xcode
 xcuserdata/
