fix: startup project of vs solution does not point the engine proj

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,16 +8,17 @@ project(MiniEngine
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
-
+set(ENGINE_PROJECT_DIR "${CMAKE_SOURCE_DIR}")
 set(ENGINE_EXTERNAL_DIR "${CMAKE_SOURCE_DIR}/engine/external")
 set(ENGINE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/engine/source")
 
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/bin")
+
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
+list(APPEND CMAKE_MODULE_PATH "${ENGINE_PROJECT_DIR}/cmake")
 include(GenerateExportHeader)
 
 add_subdirectory(${ENGINE_EXTERNAL_DIR})
