--- a/engine/source/launcher/CMakeLists.txt
+++ b/engine/source/launcher/CMakeLists.txt
@@ -13,3 +13,7 @@ PRIVATE
     mini.engine
     mini.windows
 )
+
+if (CMAKE_GENERATOR MATCHES "Visual Studio")
+    set_property(DIRECTORY ${CMAKE_BINARY_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+endif()
