fix: d3d12 agility sdk is now loaded from relative directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,13 +8,14 @@ project(MiniEngine
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+set(BUILD_TARGET_ARCH ${CMAKE_SYSTEM_PROCESSOR})
 set(ENGINE_PROJECT_DIR "${CMAKE_SOURCE_DIR}")
 set(ENGINE_EXTERNAL_DIR "${CMAKE_SOURCE_DIR}/engine/external")
 set(ENGINE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/engine/source")
 
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib")
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/bin")
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib/${BUILD_TARGET_ARCH}")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib/${BUILD_TARGET_ARCH}")
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/bin/${BUILD_TARGET_ARCH}")
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 
