mod: reorganized cmake project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib/${BUILD_TARGET_ARC
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/bin/${BUILD_TARGET_ARCH}")
 
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
+set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "build")
 
 list(APPEND CMAKE_MODULE_PATH "${ENGINE_PROJECT_DIR}/cmake")
 include(GenerateExportHeader)
