--- a/engine/source/d3d12/CMakeLists.txt
+++ b/engine/source/d3d12/CMakeLists.txt
@@ -46,6 +46,8 @@ PRIVATE
     mini.engine
 )
 
+build_source_tree(mini.d3d12)
+
 include(${ENGINE_EXTERNAL_DIR}/D3D12/d3d12.cmake)
 
 copy_d3d12(mini.d3d12)
