--- a/engine/source/launcher/CMakeLists.txt
+++ b/engine/source/launcher/CMakeLists.txt
@@ -1,5 +1,5 @@
 if (MSVC)
-    add_executable(${PROJECT_NAME} WIN32
+    add_executable(mini.launcher WIN32
         win_main.cpp
         launcher.cxx   
     )
@@ -7,13 +7,17 @@ else()
     message(FATAL_ERROR "unable to build on unknown platform")
 endif()
 
-target_link_libraries(${PROJECT_NAME}
+target_link_libraries(mini.launcher
 PRIVATE 
     mini.core
     mini.engine
     mini.windows
 )
 
+set_target_properties(mini.launcher PROPERTIES FOLDER modules)
+
 if (CMAKE_GENERATOR MATCHES "Visual Studio")
-    set_property(DIRECTORY ${CMAKE_BINARY_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
+    set_property(DIRECTORY ${CMAKE_BINARY_DIR} PROPERTY VS_STARTUP_PROJECT mini.launcher)
 endif()
+
+build_source_tree(mini.launcher)
