--- a/engine/source/windows/CMakeLists.txt
+++ b/engine/source/windows/CMakeLists.txt
@@ -37,4 +37,8 @@ PRIVATE
     mini.engine
 )
 
+if (MSVC)
+    set_source_files_properties(win_handle.cxx PROPERTIES COMPILE_FLAGS /wd4191)
+endif()
+
 build_source_tree(mini.windows)
