--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,9 @@ project(MiniEngine
 
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_EXTENSIONS FALSE)
+set(CMAKE_CXX_VISIBILITY_PRESET hidden)
+set(CMAKE_VISIBILITY_INLINES_HIDDEN TRUE)
 
 set(BUILD_TARGET_ARCH ${CMAKE_SYSTEM_PROCESSOR})
 set(ENGINE_PROJECT_DIR "${CMAKE_SOURCE_DIR}")
