add: utf convert lib

--- a/engine/external/CMakeLists.txt
+++ b/engine/external/CMakeLists.txt
@@ -5,9 +5,15 @@ macro (set_external name)
     set_target_properties(${name} PROPERTIES FOLDER external)
 endmacro()
 
-add_compile_options(/W0)
+add_compile_options(
+    /W0
+    /utf-8
+)
 
 set(FMT_INSTALL OFF)
 set(FMT_MODULE OFF)
 add_subdirectory(fmt)
 set_external(fmt)
+
+add_subdirectory(convert_utf)
+set_external(convert_utf)
