--- a/engine/source/launcher/CMakeLists.txt
+++ b/engine/source/launcher/CMakeLists.txt
@@ -1,11 +1,17 @@
-if (MSVC)
-    add_executable(mini.launcher WIN32
-        win_main.cpp
-        launcher.cxx   
-    )
+if (WIN32)
+    add_executable(mini.launcher WIN32 win_main.cpp)
+elseif (APPLE)
+    add_executable(mini.launcher macos_main.cpp)
 else()
     message(FATAL_ERROR "unable to build on unknown platform")
 endif()
+
+target_sources(mini.launcher
+PUBLIC 
+FILE_SET launcher TYPE CXX_MODULES
+FILES
+    launcher.cxx
+)
 
 target_link_libraries(mini.launcher
 PRIVATE 
@@ -15,7 +21,7 @@ PRIVATE
 )
 
 set_target_properties(mini.launcher
-PROPERTIES 
+PROPERTIES
     FOLDER module
     OUTPUT_NAME ${PROJECT_NAME}
 )
