--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(CMAKE_CXX_SCAN_FOR_MODULES ON)
+set(CMAKE_CXX_SCAN_FOR_MODULES TRUE)
 set(CMAKE_MESSAGE_LOG_LEVEL STATUS)
 
 include(mini_module)
