fix: compile errors on macos
the program now compiles and runs successfully
but since there aren't any implementation, it will just segfault (or assert fail on debug)

--- a/engine/source/launcher/CMakeLists.txt
+++ b/engine/source/launcher/CMakeLists.txt
@@ -17,7 +17,10 @@ target_link_libraries(mini.launcher
 PRIVATE 
     mini.core
     mini.engine
-    mini.windows
+    mini.platform
+
+    $<$<PLATFORM_ID:Windows>:mini.windows>
+    # $<$<PLATFORM_ID:Darwin>:mini.macos>
 )
 
 set_target_properties(mini.launcher
