add: implemented macos handle

--- a/engine/source/CMakeLists.txt
+++ b/engine/source/CMakeLists.txt
@@ -12,6 +12,9 @@ add_subdirectory(graphics)
 if (WIN32)
     add_subdirectory(windows)
     add_subdirectory(d3d12)
+elseif (APPLE)
+    add_subdirectory(macos)
+    add_subdirectory(metal)
 endif()
 
 add_subdirectory(engine)
