--- a/engine/source/engine/CMakeLists.txt
+++ b/engine/source/engine/CMakeLists.txt
@@ -5,11 +5,9 @@ PUBLIC
     FILE_SET engine TYPE CXX_MODULES
     FILES
         engine.cxx
-)
 
-target_sources(mini.engine
 PRIVATE
-    engine.cpp
+    impl/engine.cpp
 )
 
 target_link_libraries(mini.engine
