--- a/engine/source/launcher/CMakeLists.txt
+++ b/engine/source/launcher/CMakeLists.txt
@@ -1,7 +1,7 @@
 if (WIN32)
-    add_executable(mini.launcher WIN32 win_main.cpp)
+    add_executable(mini.launcher WIN32 windows/win_main.cpp)
 elseif (APPLE)
-    add_executable(mini.launcher macos_main.cpp)
+    add_executable(mini.launcher macos/macos_main.cpp)
 else()
     message(FATAL_ERROR "unable to build on unknown platform")
 endif()
