fix: compiler error on msvc
msvc still having trouble linking template functions

--- a/engine/source/core/CMakeLists.txt
+++ b/engine/source/core/CMakeLists.txt
@@ -1,4 +1,8 @@
-add_module(mini.core SHARED)
+if (MSVC)
+    add_module(mini.core STATIC)
+else()
+    add_module(mini.core SHARED)
+endif()
 
 module_sources(mini.core
 PUBLIC
