mod: changed metal-cpp lib to shared
this will solve odr violation when including metal-cpp headers on multiple sources

--- a/engine/external/CMakeLists.txt
+++ b/engine/external/CMakeLists.txt
@@ -19,5 +19,5 @@ set_external(convert_utf)
 
 if (APPLE)
     add_subdirectory(metal-cpp)
-    set_external(metal_cpp)
+    set_external(metal.cpp)
 endif()
