--- a/engine/external/metal-cpp/CMakeLists.txt
+++ b/engine/external/metal-cpp/CMakeLists.txt
@@ -1,3 +1,14 @@
-add_library(metal_cpp INTERFACE)
+add_library(metal.cpp SHARED metal-cpp.cpp)
 
-target_include_directories(metal_cpp INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(metal.cpp
+PUBLIC
+    ${CMAKE_CURRENT_SOURCE_DIR}
+)
+
+target_link_libraries(metal.cpp
+PRIVATE
+    "-framework Foundation"
+    "-framework QuartzCore"
+    "-framework Metal"
+    "-framework MetalFX"
+)
