--- a/engine/source/metal/CMakeLists.txt
+++ b/engine/source/metal/CMakeLists.txt
@@ -4,8 +4,11 @@ module_sources(mini.metal
 PUBLIC
     FILE_SET metal TYPE CXX_MODULES
     FILES
+        metal.cxx
+        metal_device.cxx
 
 PRIVATE
+    impl/metal_device.cpp
 )
 
 target_link_libraries(mini.metal
@@ -16,4 +19,6 @@ PUBLIC
 PRIVATE
     mini.macos
     mini.engine
+    metal.cpp
+    "-framework Foundation"
 )
