--- a/engine/source/apple/macos/CMakeLists.txt
+++ b/engine/source/apple/macos/CMakeLists.txt
@@ -13,7 +13,6 @@ PUBLIC
 PRIVATE
     impl/macos_handle.cpp
     impl/macos_window.cpp
-    impl/cocoa.mm
     impl/cocoa_application.mm
     impl/cocoa_window.mm
 )
@@ -26,15 +25,13 @@ PUBLIC
 PRIVATE
     mini.graphics
     mini.engine
+    mini.apple
     metal.cpp
     "-framework Foundation"
     "-framework AppKit"
 )
 
 target_include_directories(mini.macos
-PUBLIC
-    ${CMAKE_CURRENT_SOURCE_DIR}/public
-
 PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/interface
 )
