--- a/engine/source/launcher/CMakeLists.txt
+++ b/engine/source/launcher/CMakeLists.txt
@@ -1,7 +1,8 @@
 if (WIN32)
     add_executable(mini.launcher WIN32 windows/win_main.cpp)
 elseif (APPLE)
-    add_executable(mini.launcher macos/macos_main.cpp)
+    add_executable(mini.launcher MACOSX_BUNDLE macos/macos_main.cpp)
+    set_target_properties(mini.launcher PROPERTIES MACOSX_BUNDLE TRUE)
 else()
     message(FATAL_ERROR "unable to build on unknown platform")
 endif()
