--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,10 +12,13 @@ set(CMAKE_CXX_VISIBILITY_PRESET hidden)
 set(CMAKE_VISIBILITY_INLINES_HIDDEN TRUE)
 
 set(BUILD_TARGET_ARCH ${CMAKE_SYSTEM_PROCESSOR})
+set(ENGINE_PROJECT_AHTHOR "ross1573")
+set(ENGINE_MACOS_IDENTIFIER "com.ross1573.MiniEngine")
+set(ENGINE_MODULE_PREFIX $<IF:$<CONFIG:Debug>,minid,mini>)
+
 set(ENGINE_PROJECT_DIR "${CMAKE_SOURCE_DIR}")
 set(ENGINE_EXTERNAL_DIR "${CMAKE_SOURCE_DIR}/engine/external")
 set(ENGINE_SOURCE_DIR "${CMAKE_SOURCE_DIR}/engine/source")
-set(ENGINE_MODULE_PREFIX $<IF:$<CONFIG:Debug>,minid,mini>)
 
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib/${BUILD_TARGET_ARCH}")
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${ENGINE_PROJECT_DIR}/lib/${BUILD_TARGET_ARCH}")
@@ -26,6 +29,10 @@ set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "build")
 
 list(APPEND CMAKE_MODULE_PATH "${ENGINE_PROJECT_DIR}/cmake")
 include(GenerateExportHeader)
+
+if (APPLE)
+    enable_language(OBJCXX)
+endif()
 
 add_subdirectory(${ENGINE_EXTERNAL_DIR})
 add_subdirectory(${ENGINE_SOURCE_DIR})
