mod: changed CoreAnimation objc objects to metal.cpp objects

--- a/engine/source/apple/CMakeLists.txt
+++ b/engine/source/apple/CMakeLists.txt
@@ -12,6 +12,7 @@ target_link_libraries(mini.apple
 PUBLIC
     mini.core
     mini.platform
+    metal.cpp
 )
 
 target_include_directories(mini.apple
