Revert "add: uni-algo"
This reverts commit 6d0086ae6f6fed1a288a9b3405f2cd15f27bfabb.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "fmt"]
+[submodule "engine/external/fmt"]
 	path = engine/external/fmt
 	url = https://github.com/fmtlib/fmt.git
-	
-[submodule "uni-algo"]
-	path = engine/external/uni-algo
-	url = https://github.com/uni-algo/uni-algo.git
