--- a/engine/source/core/CMakeLists.txt
+++ b/engine/source/core/CMakeLists.txt
@@ -57,7 +57,7 @@ PUBLIC
         type/type_traits.cxx
 
 PRIVATE
-    assert.cpp
+    impl/assert.cpp
 
     $<$<PLATFORM_ID:Windows>:windows/win_log.cpp>
     $<$<PLATFORM_ID:Windows>:windows/win_assert.cpp>
